# drift-server

./: Makefile.am  README.md  configure.ac  drift-server.sh
conf/: Makefile.am  drift-server.conf
src/: Makefile.am  dconf.cpp  dconf.h  drift_server.cpp  drift_server.h  one_way_channel.cpp  one_way_channel.h
utils/: Makefile.am  check_single.cpp
